# vmecs

./: .gitignore  CMakeLists.txt  CNAME  README.md  plan.txt
app/: CMakeLists.txt  client.c  demo.c  demo.old.c  main.c  middle.c  server.c  socks5.c  vmecs-main
app/config/: dokodemo.toml  socks-native.toml  socks-socks4.toml  socks-vmess.toml  socks5-native.toml  socks5-vmess.toml  vmess-native.toml
app/hook/: CMakeLists.txt  hook.c  hook.def  hook.h  main.c
app/socks5/: client.c  server.c
app/test/: CMakeLists.txt
app/test/socks5/: CMakeLists.txt  client.c  server.c
app/test/vmess/: CMakeLists.txt  client.c  middle.c  server.c
app/vhook/: CMakeLists.txt  hook.c  hook.def  hook.h  hookv  main.c
app/vmecs/: CMakeLists.txt  main.c
crypto/: CMakeLists.txt  aes.c  aes.h  hash.c  hash.h
ext/: CMakeLists.txt  json.c  json.h
hooker/: libhookv.c  main.c
proto/: CMakeLists.txt  buf.c  buf.h  common.c  common.h  config.h  iobound.h  rbuf.c  rbuf.h  socket.h  socks5.h  tcp.h  vmess.c  vmess.h
proto/dokodemo/: inbound.c  inbound.h  outbound.c  outbound.h
proto/native/: outbound.c  outbound.h  tcp.c  tcp.h
proto/relay/: etcp.c  etcp.h  inbound.h  outbound.h  tcp.c  tcp.h
proto/router/: inbound.h  outbound.h  tcp.c  tcp.h
proto/socks/: inbound.c  inbound.h  outbound.c  outbound.h  socks4.c  socks4.h  socks5.c  socks5.h  tcp.c  tcp.h
proto/socks5/: inbound.c  inbound.h  outbound.c  outbound.h  socks5.c  socks5.h  tcp.c  tcp.h
proto/vmess/: decoding.c  decoding.h  encoding.c  encoding.h  inbound.c  inbound.h  outbound.c  outbound.h  request.c  response.c  tcp.c  tcp.h  vmess.c  vmess.h
pub/: CMakeLists.txt  epoll.h  err.h  fd.h  hash.h  random.c  random.h  serial.c  serial.h  socket.h  thread.h  time.h  type.h
toml/: CMakeLists.txt  ast.c  ast.h  lexer.c  lexer.h  obj.c  obj.h  parser.h  table.c  table.h  test.c  test.toml  toml.c  toml.h
